--- a/app/sass/partials/_header.sass
+++ b/app/sass/partials/_header.sass
@@ -79,6 +79,12 @@
   top: 50%
   right: 20px
   margin-top: -12px
+.header-others
+  margin-top: 13px
+  text-transform: uppercase
+  color: $color-yellow
+  text-decoration: underline 
+  +f(b, 14)
 
 .header-call
   display: inline-block
@@ -88,6 +94,7 @@
   color: $color-yellow
   text-decoration: none
   line-height: 1
+
   &:not(:last-child)
     margin-right: 30px
   .icon-phone
