--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -20,32 +20,61 @@ title: Новини
             <a href="zapit.html">Запити</a>
           </h3>
         </div>
-        
+
       </header>
 
       <!-- begin contacts  -->
       <div class="contacts">
-        <!-- begin vacancy  -->
-        <div class="vacancy">
-          <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
-          <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
+        <!-- begin contacts__left  -->
+        <div class="contacts__left">
+          <div class="select">
+            <select class="" name="">
+              <option value="option">Одесса</option>
+              <option value="option">Одесса1</option>
+              <option value="option">Одесса2</option>
+              <option value="option">Одесса3</option>
+              <option value="option">Одесса4</option>
+            </select>
+            <div class="select__value">
+              Одесса
+            </div>
+            <div class="select__arrow icon icon-select"></div>
+          </div>
+          <!-- end select  -->
+          <!-- begin vacancy wrapper -->
+          <div class="vacancy-wrapper">
+          <!-- begin vacancy  -->
+          <div class="vacancy">
+            <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
+            <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
+          </div>
+          <!-- end vacancy -->
+          <!-- begin vacancy  -->
+          <div class="vacancy">
+            <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
+            <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
+          </div>
+          <!-- end vacancy -->
+          <!-- begin vacancy  -->
+          <div class="vacancy">
+            <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
+            <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
+          </div>
+          <!-- end vacancy -->
+          </div>
+          <!-- end vacancy wrapper -->
         </div>
-        <!-- end vacancy -->
-        <!-- begin vacancy  -->
-        <div class="vacancy">
-          <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
-          <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
+        <!-- end contacts__left -->
+        <!-- begin contacts__right -->
+        <div class="contacts__right">
+         <img src="img/mapu.png" alt="">
+
         </div>
-        <!-- end vacancy -->
-        <!-- begin vacancy  -->
-        <div class="vacancy">
-          <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
-          <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
-        </div>
-        <!-- end vacancy -->
-        
+        <!-- end contacts__right -->
       </div>
       <!-- end contacts -->
+
+
 
       <!-- <div class="align-center">
         {{mixins.btnLink('Завантажити ще', 'btn_md')}}
