--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,10 +3,13 @@ title: Index page
 pages:
   - main
   - news
-  - news-pr
+  - akcents
   - news-piece
   - 404
   - old-browser
+  - zapit
+  - contacts
+  - map
 ---
 {% extends "layouts/_layout.html" %}
 {% block content %}
