--- a/app/templates/layouts/_layout.html
+++ b/app/templates/layouts/_layout.html
@@ -17,7 +17,7 @@
 
     {% if !noScripts %}
       <!-- BEGIN scripts -->
-      <script type="text/javascript" src="js/app.js"></script>
+      <!-- <script type="text/javascript" src="js/app.js"></script> -->
       <!-- END scripts -->
     {% endif %}
 
