--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -20,19 +20,49 @@ title: Новини
             <a href="zapit.html">Запити</a>
           </h3>
         </div>
-        
+
       </header>
 
       <!-- begin contacts  -->
       <div class="contacts">
         <!-- begin contacts__left  -->
         <div class="contacts__left">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, voluptatibus, necessitatibus? Quibusdam dolorum, ratione impedit. Libero dolorum ab suscipit numquam unde corporis aliquid, neque cumque laboriosam consectetur, saepe pariatur sunt?
+          <div class="select">
+            <select class="" name="">
+              <option value="option">Одесса</option>
+              <option value="option">Одесса1</option>
+              <option value="option">Одесса2</option>
+              <option value="option">Одесса3</option>
+              <option value="option">Одесса4</option>
+            </select>
+            <div class="select__value">
+              Одесса
+            </div>
+            <div class="select__arrow icon icon-select"></div>
+          </div>
+          <!-- end select  -->
+
+          <!-- begin contact item -->
+          <div class="contact">
+            <p>
+              Управління патрульної поліції МВС в м. Одесі
+            </p>
+            <p class="contact__schedule">
+              9:00 – 18:00  <span>пн - пт</span>
+            </p>
+            <ul class="contact__info">
+              <li><i class="icon icon-loc"></i>Середньофонтанська, 14, м. Одеса, 65039</li>
+              <li><i class="icon icon-phone2"></i>(044) 254-94-88 <span>(гаряча лінія)</span></li>
+              <li><i class="icon icon-facebook"></i>facebook.com/odesapolice</li>
+            </ul>
+          </div>
+          <!-- END contact item -->
         </div>
         <!-- end contacts__left -->
         <!-- begin contacts__right -->
         <div class="contacts__right">
          <img src="img/mapu.png" alt="">
+
         </div>
         <!-- end contacts__right -->
       </div>
