--- a/app/templates/partials/_header.html
+++ b/app/templates/partials/_header.html
@@ -22,12 +22,13 @@
           (044) 254-94-88
         </span>
       </a>
+      <a href="#" class="header-others">Інші контакти</a>
     </div>
 
     <div class="header__menu">
       <nav class="main-menu">
-        <a class="main-menu__link is-active" href="#">Головна</a>
-        <a class="main-menu__link" href="contacts.html">Інші контакти</a>
+       <!--  <a class="main-menu__link is-active" href="#">Головна</a>
+        <a class="main-menu__link" href="contacts.html">Інші контакти</a> -->
         <!-- <a class="main-menu__link is-active" href="#">Головна</a>
         <a class="main-menu__link" href="#">Новини</a>
         <a class="main-menu__link" href="#">Детальна інформація</a>
