--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -11,10 +11,10 @@ title: Новини
       <header class="content-header">
         <div class="content-header__left">
           <h3 class="title title_link is-active">
-            <a href="#">Події</a>
+            <a href="news.html">Новини</a>
           </h3>
           <h3 class="title title_link">
-            <a href="#">Новини</a>
+            <a href="akcents.html">Акценти</a>
           </h3>
         </div>
         <div class="content-header__right">
