--- a/app/templates/zapit.html
+++ b/app/templates/zapit.html
@@ -25,25 +25,24 @@ title: Новини
 
       <!-- begin contacts  -->
       <div class="contacts">
-        <!-- begin vacancy  -->
-        <div class="vacancy">
-          <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
-          <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
+        <div class="article">
+          <h1>Some title</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque illum est, animi! Vel beatae, exercitationem amet!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque <a href='#'>illum est, animi!</a> Vel beatae, exercitationem amet!</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ipsam sit quod nemo consectetur, deserunt, inventore magnam quibusdam beatae aperiam quis harum sequi, quisquam id fugit quaerat amet, eos soluta!</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ipsam sit quod nemo consectetur, deserunt, inventore magnam quibusdam beatae aperiam quis harum sequi, quisquam id fugit quaerat amet, eos soluta!</li>
+            <li>Loremerat amet, eos soluta!</li>
+          </ul>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque illum est, animi! Vel beatae, exercitationem amet!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque illum est, animi! Vel beatae, exercitationem amet!</p>
         </div>
-        <!-- end vacancy -->
-        <!-- begin vacancy  -->
-        <div class="vacancy">
-          <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
-          <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
+        <!-- end text -->
+        <!-- begin form  -->
+        <div class="form">
+          <h1>[FORM][FORM][FORM][FORM][FORM][FORM][FORM][FORM][FORM][FORM][FORM][FORM]</h1>
         </div>
-        <!-- end vacancy -->
-        <!-- begin vacancy  -->
-        <div class="vacancy">
-          <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
-          <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
-        </div>
-        <!-- end vacancy -->
-        
+        <!-- end form -->
       </div>
       <!-- end contacts -->
 
