--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -43,24 +43,9 @@ title: Новини
           <!-- end select  -->
           <!-- begin vacancy wrapper -->
           <div class="vacancy-wrapper">
-          <!-- begin vacancy  -->
-          <div class="vacancy">
-            <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
-            <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
-          </div>
-          <!-- end vacancy -->
-          <!-- begin vacancy  -->
-          <div class="vacancy">
-            <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
-            <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
-          </div>
-          <!-- end vacancy -->
-          <!-- begin vacancy  -->
-          <div class="vacancy">
-            <div class="vacancy__title">Шукаемо нового шефа полиции Волинскои Области</div>
-            <a href='#' class="vacancy__download"><i class="icon icon-pdf"></i><span>Завантажити детали вакансії</span></a>
-          </div>
-          <!-- end vacancy -->
+            {{mixins.vac()}}
+            {{mixins.vac()}}
+            {{mixins.vac()}}
           </div>
           <!-- end vacancy wrapper -->
         </div>
