--- a/app/templates/zapit.html
+++ b/app/templates/zapit.html
@@ -20,31 +20,80 @@ title: Новини
             <a href="zapit.html">Запити</a>
           </h3>
         </div>
-        
+
       </header>
 
-      <!-- begin contacts  -->
-      <div class="contacts">
-        <div class="article">
-          <h1>Some title</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque illum est, animi! Vel beatae, exercitationem amet!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque <a href='#'>illum est, animi!</a> Vel beatae, exercitationem amet!</p>
-          <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ipsam sit quod nemo consectetur, deserunt, inventore magnam quibusdam beatae aperiam quis harum sequi, quisquam id fugit quaerat amet, eos soluta!</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ipsam sit quod nemo consectetur, deserunt, inventore magnam quibusdam beatae aperiam quis harum sequi, quisquam id fugit quaerat amet, eos soluta!</li>
-            <li>Loremerat amet, eos soluta!</li>
-          </ul>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque illum est, animi! Vel beatae, exercitationem amet!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque illum est, animi! Vel beatae, exercitationem amet!</p>
-        </div>
-        <!-- end text -->
-        <!-- begin form  -->
-        <div class="form">
-          <h1>[FORM][FORM][FORM][FORM][FORM][FORM][FORM][FORM][FORM][FORM][FORM][FORM]</h1>
-        </div>
-        <!-- end form -->
+
+      <div class="article">
+        <h1>Какой-то заголовок</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque illum est, animi! Vel beatae, exercitationem amet!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque <a href='#'>illum est, animi!</a> Vel beatae, exercitationem amet!</p>
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ipsam sit quod nemo consectetur, deserunt, inventore magnam quibusdam beatae aperiam quis harum sequi, quisquam id fugit quaerat amet, eos soluta!</li>
+          <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ipsam sit quod nemo consectetur, deserunt, inventore magnam quibusdam beatae aperiam quis harum sequi, quisquam id fugit quaerat amet, eos soluta!</li>
+          <li>Loremerat amet, eos soluta!</li>
+        </ul>
+        <ol>
+          <li>asdad</li>
+          <li>asdad</li>
+          <li>asdad</li>
+          <li>asdad</li>
+        </ol>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque illum est, animi! Vel beatae, exercitationem amet!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum sed ducimus assumenda voluptatem temporibus quam. Et officiis ipsum tenetur accusantium aspernatur modi doloremque illum est, animi! Vel beatae, exercitationem amet!</p>
       </div>
-      <!-- end contacts -->
+      <!-- end text -->
+
+      <!-- begin form  -->
+      <div class="form">
+        <h2>зворотній зв’язок</h2>
+        <!--begin form__field  -->
+        <div class="form__field form__field_1">
+          <label for="">Рубрика</label>
+          <div class="select">
+            <select class="" name="">
+              <option value="option">Одесса</option>
+              <option value="option">Одесса1</option>
+              <option value="option">Одесса2</option>
+              <option value="option">Одесса3</option>
+              <option value="option">Одесса4</option>
+            </select>
+            <div class="select__value">
+              Одесса
+            </div>
+            <div class="select__arrow icon icon-select"></div>
+          </div>
+        </div>
+        <!--end form__field  -->
+
+        <!--begin form__field  -->
+        <div class="form__field form__field_2">
+          <label for="">ПІБ</label>
+          <input class="input" type="text" placeholder="Як до Вас звертатись?" name="" id="">
+        </div>
+        <!--end form__field  -->
+        <!--begin form__field  -->
+        <div class="form__field form__field_3">
+          <label for="">E-Mail</label>
+          <input class="input" type="text" placeholder="Як з Вами зв’язатись" name="" id="">
+        </div>
+        <!--end form__field  -->
+
+        <!--begin form__field  -->
+        <div class="form__field form__field_4">
+          <label for="">Повідомлення</label>
+          <textarea placeholder="Чим ми можемо допомогти?" name="" id=""></textarea>
+        </div>
+        <!--end form__field  -->
+
+        <div class="form__button">
+          <input type="submit" class="btn" value="Надіслати">
+        </div>
+
+
+      </div>
+      <!-- end form -->
+
 
       <!-- <div class="align-center">
         {{mixins.btnLink('Завантажити ще', 'btn_md')}}
