--- a/app/sass/partials/_article.sass
+++ b/app/sass/partials/_article.sass
@@ -3,12 +3,12 @@
   line-height: 1.57
   figure
     img
-      width: 100% 
+      width: 100%
     figcaption
-      color: #999 
+      color: #999
       display: block
       text-align: right
-      font-size: 10px 
+      font-size: 10px
   p, ul, ol
     margin: 1em 0
     &:first-child
@@ -28,7 +28,9 @@
     > li
       &:before
         content: "- "
-
+  ol
+    list-style: decimal
+    padding-left: 18px
   +sm
     > img
       margin-left: -10px
