--- a/app/sass/partials/_contacts.sass
+++ b/app/sass/partials/_contacts.sass
@@ -17,6 +17,10 @@
 	.vacancy__title
 		+f(r,16)
 		margin-bottom: 10px
+		a
+			color: #19294A
+			text-decoration: none
+
 	.vacancy__download
 		text-decoration: none
 		color: #777
@@ -38,6 +42,7 @@
 		top: 0
 		height: 100%
 		width: 100%
+		z-index: 1
 	.select__value
 		height: 54px
 		line-height: 54px
@@ -48,9 +53,62 @@
 		color: #000
 		font-size: 20px
 		position: absolute
-		right: 10px
+		right: 16px
 		top: 50%
-		background: #f00
+		margin-top: -9px
+		color: #435679
+.input, textarea
+	border: 1px solid #435679
+	height: 54px
+	line-height: 54px
+	padding-left: 20px
+	padding-right: 20px
+	+f(r,14)
+	width: 100%
+	box-sizing: border-box
+textarea
+	height: 124px
+
+.form
+	margin: 50px 0
+	h2
+		font-size: 24px
+		+f(b,24)
+		margin-bottom: 50px
+		color: #24385e
+		+r(750)
+			margin-bottom: 25px
+	.form__field_1,.form__field_2,.form__field_3
+		float: left
+	.form__field_1
+		width: 36%
+		margin-right: 10%
+	.form__field_2
+		float: left
+		width: 22%
+		margin-right: 10%
+	.form__field_3
+		float: right
+		width: 22%
+	.form__field_4
+		clear: both
+	&__button
+		text-align: right
+		+r(550)
+			display: block
+			.btn
+				width: 100%
+	.form__field
+		margin-bottom: 40px
+		+r(750)
+			margin: 0
+			float: none
+			width: 100%
+			margin-bottom: 10px
+		label
+			margin-bottom: 12px
+			font-style: 16px
+			display: block
 .contact
 	margin-top: 50px
 	font-size: 16px
@@ -65,16 +123,18 @@
 			text-transform: uppercase
 	ul
 		font-size: 14px
+		margin-top: 35px
 	li
-		margin-bottom: 13px
+		margin-bottom: 19px
 		padding-left: 40px
 		position: relative
+		line-height: 1.3
 		i
 			position: absolute
 			left: 0
-			top: 2px
+			top: -1px
 			color: #fedc32
-			font-size: 27px
+			font-size: 23px
 			&.icon-facebook
 				color: #fff
 				font-size: 13px
@@ -84,3 +144,26 @@
 				height: 21px
 				background: #fedc32
 				text-align: center
+.q
+	display: block
+	text-decoration: none
+	padding: 14px 14px 20px 73px
+	position: relative
+	font-size: 14px
+	color: #1a2a49
+	line-height: 22px
+	min-height: 40px
+	&.is-active,&:hover
+		&::before
+			position: absolute
+			left: 0
+			top: 0
+			content: ''
+			bottom: 0
+			width: 5px
+			background: #fedc32
+	.q__num
+		+f(l,36)
+		position: absolute
+		left: 14px
+		line-height: 1
