--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -51,7 +51,7 @@ title: Новини
         </div>
         <!-- end contacts__left -->
         <!-- begin contacts__right -->
-        <div class="contacts__right">
+        <div class="contacts__right" id="mapUkraine">
          <img src="img/mapu.png" alt="">
 
         </div>
