--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -60,8 +60,8 @@ title: Новини
         </div>
         <!-- end contacts__left -->
         <!-- begin contacts__right -->
-        <div class="contacts__right">
-         <img src="img/mapu.png" alt="">
+        <div class="contacts__right" id="mapUkraine">
+         <!-- <img src="img/mapu.png" alt=""> -->
 
         </div>
         <!-- end contacts__right -->
