--- a/app/sass/app.sass
+++ b/app/sass/app.sass
@@ -4,7 +4,7 @@
 @import fonts
 @import generated/iconfont
 @import ../../node_modules/slick-carousel/slick/slick.scss
-// @import ../../node_modules/perfect-scrollbar/src/css/main.scss
+@import ../map/map
 @import lib/perfect-scrollbar
 @import common
 @import layouts
