--- a/app/sass/partials/_contacts.sass
+++ b/app/sass/partials/_contacts.sass
@@ -5,9 +5,15 @@
 	&__left
 		float: right
 		width: 280px
+		+r(800)
+			float: none
+			width: auto
 	&__right
 		overflow: hidden
 		padding-right: 30px
+		+r(800)
+		float: none
+		width: auto
 		img
 			width: 100%
 .vacancy-wrapper
