--- a/app/sass/partials/_header.sass
+++ b/app/sass/partials/_header.sass
@@ -83,8 +83,10 @@
   margin-top: 13px
   text-transform: uppercase
   color: $color-yellow
-  text-decoration: underline 
+  text-decoration: underline
   +f(b, 14)
+  +r($bp2)
+    display: none
 
 .header-call
   display: inline-block
