--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -51,7 +51,7 @@ title: Новини
               9:00 – 18:00  <span>пн - пт</span>
             </p>
             <ul class="contact__info">
-              <li><i class="icon icon-loc"></i>Середньофонтанська, 14, <br>м. Одеса, 65039</li>
+              <li><i class="icon icon-location"></i>Середньофонтанська, 14, <br>м. Одеса, 65039</li>
               <li><i class="icon icon-phone2"></i>(044) 254-94-88 <span>(гаряча лінія)</span></li>
               <li><i class="icon icon-facebook"></i>facebook.com/odesapolice</li>
             </ul>
