--- a/app/templates/partials/_hero-slider.html
+++ b/app/templates/partials/_hero-slider.html
@@ -20,7 +20,7 @@
       <div class="hero-slide__content">
       <h2 class="title title_lg">В Україні<br> несуть службу вже понад 4500 патрульних</h2>
       <p>Ще 2570 майбутніх патрульних проходять навчання у семи містах у різних регіонах країни.</p>
-      <a href="#" class="link-more">Детальніше <i class="icon icon-more"></i></a>
+      <a href="news-piece.html" class="link-more">Детальніше <i class="icon icon-more"></i></a>
       </div>
       <img src="img/map.png" alt="" class="hero-slide__image">
     </div>
