--- a/app/templates/partials/_header.html
+++ b/app/templates/partials/_header.html
@@ -1,7 +1,7 @@
 <!-- BEGIN header -->
 <header class="header">
   <div class="header__logo">
-    <a href="/" class="main-logo main-logo_adaptive main-logo_beta"></a>
+    <a href="main.html" class="main-logo main-logo_adaptive main-logo_beta"></a>
   </div>
 
   <div class="header__content">
@@ -22,7 +22,7 @@
           (044) 254-94-88
         </span>
       </a>
-      <a href="#" class="header-others">Інші контакти</a>
+      <a href="contacts.html" class="header-others">Інші контакти</a>
     </div>
 
     <div class="header__menu">
