--- a/app/sass/_common.sass
+++ b/app/sass/_common.sass
@@ -239,6 +239,7 @@ em, i
       .news__pic
         float: left
         width: percentage(320/550)
+
       .news__content
         padding: 30px 0 0 percentage(40/550)
         float: right
@@ -255,8 +256,18 @@ em, i
 
 .news__pic
   overflow: hidden
-  box-sizing: border-box
+  box-sizing: content-box
   max-height: 200px
+  height: 0
+  padding-bottom: 41%
+  background-size: cover
+  background-color: #fafafa
+  background-position: 50% 50%
+  background-repeat: no-repeat
+  overflow: hidden
+  width: percentage(320/550)
+  +md
+    width: auto 
   img
     display: block
     max-width: 100%
@@ -266,14 +277,17 @@ em, i
 .news__content
   box-sizing: border-box
   padding: 20px 5px 10px 0
+  width: percentage(230/550)
+  +md
+    width: auto
 
 .news__text
   font-size: 18px
   line-height: 1.667
 .news__date
-  color: #999 
-  font-size: 12px 
-  margin-left: 10px 
+  color: #999
+  font-size: 12px
+  margin-left: 10px
 
 .news__arrow
   margin-top: 22px
