--- a/app/sass/_layouts.sass
+++ b/app/sass/_layouts.sass
@@ -44,7 +44,8 @@
 
 .l-main-page__right
   float: right
-  margin-left: 360px
+  width: percentage(550/960)
+  // margin-left: 360px
   max-width: 550px
 
 .l-news-page
