--- a/app/templates/partials/_mixins.html
+++ b/app/templates/partials/_mixins.html
@@ -10,8 +10,8 @@
 
 {% macro news(news, mod) %}
 <a href="news-piece.html" class="news{% if mod %} {{mod}}{% endif %}">
-  <div class="news__pic">
-    <img src="{{news.img}}" alt="">
+  <div class="news__pic" style="background-image: url({{news.img}})">
+    <!-- <img src="{{news.img}}" alt=""> -->
   </div>
   <div class="news__content">
     <p class="news__text">{{news.text}} <span class="news__date">12.11.2016</span></p>
