--- a/app/sass/_common.sass
+++ b/app/sass/_common.sass
@@ -120,8 +120,19 @@ em, i
   box-sizing: border-box
   padding: 14px 0 10px 112px
   +trans(box-shadow)
-  &:hover
+  &:hover,&.is-active
     box-shadow: -5px 0 0 0 $color-yellow
+    .ps-container &
+      &::after
+        box-shadow: none
+        position: absolute
+        left: 0
+        top: 0
+        bottom: 0
+        content: ''
+        width: 5px
+        background: $color-yellow
+
 
 .event__left
   position: absolute
@@ -267,7 +278,7 @@ em, i
   overflow: hidden
   width: percentage(320/550)
   +md
-    width: auto 
+    width: auto
   img
     display: block
     max-width: 100%
@@ -456,6 +467,12 @@ em, i
   font-size: 0
   margin: 0 -1px -25px 0
   text-align: center
+  .news__pic
+    float: none
+    width: auto
+  .news__content
+    float: none
+    width: auto
   +md
     .news-list__item
       width: 50%
