--- a/app/sass/partials/_contacts.sass
+++ b/app/sass/partials/_contacts.sass
@@ -55,6 +55,10 @@
 		padding-left: 20px
 		font-size: 14px
 		color: #1a2a49
+		overflow: hidden
+		text-overflow: ellipsis
+		white-space: nowrap
+		padding-right: 24px 
 	.select__arrow
 		color: #000
 		font-size: 20px
